<resources>
    <string name="app_name">MAPReminder</string>

    <string name="bt_add">Add</string>
    <string name="remove">Remove</string>
    <string name="bt_all">See all</string>
    <string name="bt_date">Date</string>
    <string name="lb_description">Description</string>
    <string name="lb_annual">Annually</string>

    <string name="channel_description">Reminds</string>
    <string name="channel_name">Reminder</string>
</resources>
